@@ -7,6 +7,10 @@
    - dtucker@cvs.openbsd.org 2008/06/14 17:07:11
      [sshd.c]
      ensure default umask disallows at least group and world write; ok djm@
+   - djm@cvs.openbsd.org 2008/06/14 18:33:43
+     [session.c]
+     suppress the warning message from chdir(homedir) failures
+     when chrooted (bz#1461); ok dtucker
 
 20080614
  - (djm) [openbsd-compat/sigact.c] Avoid NULL derefs in ancient sigaction
@@ -4379,4 +4383,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5014 2008/06/15 21:50:58 djm Exp $
+$Id: ChangeLog,v 1.5015 2008/06/15 21:53:16 djm Exp $
